# DeepLearning

./: .env  .gitignore  LICENSE  README.md  app.py  benchmark_asr.py  listar.py  metricas_finais.csv  pyproject.toml
src/: schemas.py  utils.py
src/extractors/: llm_extractor.py
src/processors/: vosk_engine.py  wav2vec_engine.py  whisper_engine.py
